Fixing overflowing tables

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -172,11 +172,14 @@ hr {
         border-top-color: #e3f0fe;
     }
 }
+/* Table */
+.table-container {
+    overflow-x: auto;
+}
 table {
     margin-bottom: 3em;
     border-spacing: 0;
     border-collapse: collapse;
-}
 th, td {
     border-bottom: 1px solid #2a2b30;
     text-align: left;
